# Calnio

./: .dockerignore  .env  .gitignore  AGENTS.md  CHANGELOG.md  DIRECTORY_STRUCTURE.md  Dockerfile  LICENSE  OOP_RECOMMENDATIONS.md  Procfile  README.md  START_SERVER.bat  START_SERVER.sh  SYNCSTATUS_ENUM_FIX.md  TEMPLATE_SYSTEM.md  alembic.ini  calnio_backup.dump  db_schema.sql  docker-compose.yml  dump.rdb  icloud_sync_token.pkl  landing.html  localhost+2-key.pem  localhost+2.pem  main.py  manage.py  ngrok.yml  plan-bidirectionalCaldavNotionSync.prompt.md  plan-calnioCompletionRoadmap.prompt.md  prometheus.yml  promtail-config.yaml  pyproject.toml  railway.json  redis_test.py  requirements.txt  verify_enum_fix.py
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 001_add_sync_interval_to_notion_integrations.py  0e3a808b8886_initial_users.py  723eede5975e_initial_migration.py  b9f5a4a9d0d8_add_sync_interval_to_users_table.py  (+1 more)
backend/app/: main.py  version.py
deploy/: README.md  ngrok.yml
docs/: EXAMPLE_TRIGGERS_WITH_ENUM.py  POSTGRESQL_ENUM_GUIDE.md  WEBHOOK_QUICK_REFERENCE.md  WEBHOOK_TESTING.md
frontend/: package-lock.json  package.json
grafana/: calnio_litestar_dashboard.json
issues/: improve-file-structure.md
scripts/: apscheduler_test.py  caldav_crud_demo.py  check_notion_access.py  cleanup_duplicates.py  generate_tree.py  migrate_normalize_ids.py  playground.py  setup_precommit.py  test_waitlist_email.py
server/: main.py
tests/: test_admin_access.py  test_scheduler.py  test_sync_manager.py
(+274 files in other folders)
